--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "radix",
   "version": "0.1.0",
-  "description": "The Ultimate React + Typescript Project Starting Point",
+  "description": "The Ultimate React + Typescript Boilerplate",
   "main": "src/index.js",
   "scripts": {
-    "start": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack --env development",
     "build": "webpack --env production"
   },
   "keywords": [
@@ -16,11 +16,13 @@
   "repository": "",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.19",
     "eslint": "^5.4.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.17.0",
     "webpack-cli": "^3.1.0",
     "webpack-merge": "^4.1.4"
