--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The Ultimate React + Typescript Boilerplate",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack --env development",
+    "start": "nodemon --watch webpack.config.js --exec \"webpack-dev-server --env development\"",
     "build": "webpack --env production"
   },
   "keywords": [
@@ -23,8 +23,10 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
     "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.18.3",
     "webpack": "^4.17.0",
     "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.4"
   }
 }
