--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The Ultimate React + Typescript Boilerplate",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --watch webpack.config.js --exec \"webpack-dev-server --env development\"",
+    "start": "nodemon --watch webpack/ --exec \"webpack-dev-server --env development\"",
     "build": "webpack --env production"
   },
   "keywords": [
@@ -13,9 +13,15 @@
     "typescript"
   ],
   "author": "hastyy <jpm.dias@campus.fct.unl.pt>",
-  "repository": "",
+  "repository": "https://github.com/hastyy/radix",
   "license": "ISC",
+  "dependencies": {
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2"
+  },
   "devDependencies": {
+    "@types/react": "^16.4.11",
+    "@types/react-dom": "^16.0.7",
     "clean-webpack-plugin": "^0.1.19",
     "eslint": "^5.4.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -24,6 +30,8 @@
     "eslint-plugin-react": "^7.11.1",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.3",
+    "ts-loader": "^4.5.0",
+    "typescript": "^3.0.1",
     "webpack": "^4.17.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
