Typescript and Webpack: Source Maps. Might go for a faster option as the project grows. Will keep monitoring the performance.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "./dist/",
+    "sourceMap": true,
     "module": "esnext", // Necessary for allowSyntheticDefaultImports
     "moduleResolution": "node", // Necessary for allowSyntheticDefaultImports
     "target": "es5",
