--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,12 @@
       "es2018.promise",
       "dom",
     ],
+    "baseUrl": "src", // This must be specified if "paths" is.
+    "paths": {
+      "*": [
+        "*",
+      ]
+    },
   },
   "include": [
     "./src/**/*",
