--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
     "fast-sass-loader": "^1.4.5",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.3",
@@ -39,6 +40,7 @@
     "style-loader": "^0.22.1",
     "ts-loader": "^4.5.0",
     "typescript": "^3.0.1",
+    "url-loader": "^1.1.1",
     "webpack": "^4.17.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
