--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^9.1.3",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
+    "cssnano": "^4.1.0",
     "eslint": "^5.4.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
@@ -36,10 +37,12 @@
     "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.3",
     "nodemon": "^1.18.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.22.1",
     "ts-loader": "^4.5.0",
     "typescript": "^3.0.1",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.1",
     "webpack": "^4.17.0",
     "webpack-cli": "^3.1.0",
