--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fast-sass-loader": "^1.4.5",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "inline-manifest-webpack-plugin": "^4.0.1",
     "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.3",
     "nodemon": "^1.18.3",
