--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon --watch webpack/ --exec \"webpack-dev-server --env development\"",
-    "build": "webpack --env production"
+    "build": "webpack --env production",
+    "build:stats": "webpack --env production --profile --json > stats.json"
+
   },
   "keywords": [
     "webpack",
