--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "nodemon --watch webpack/ --exec \"webpack-dev-server --env development\"",
     "build": "webpack --env production",
     "build:stats": "webpack --env production --profile --json > stats.json"
-
   },
   "keywords": [
     "webpack",
@@ -35,6 +34,7 @@
     "eslint-plugin-react": "^7.11.1",
     "fast-sass-loader": "^1.4.5",
     "file-loader": "^2.0.0",
+    "fork-ts-checker-webpack-plugin": "^0.4.9",
     "html-webpack-plugin": "^3.2.0",
     "inline-manifest-webpack-plugin": "^4.0.1",
     "mini-css-extract-plugin": "^0.4.2",
