--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "description": "The Ultimate React + Typescript Boilerplate",
   "main": "src/index.js",
+  "engines": {
+    "node": "<=8.9.4 || >=9.12.0"
+  },
   "scripts": {
     "start": "nodemon --watch webpack/ --exec \"webpack-dev-server --env development\"",
     "build": "webpack --env production",
@@ -24,6 +27,7 @@
     "@types/react": "^16.4.11",
     "@types/react-dom": "^16.0.7",
     "autoprefixer": "^9.1.3",
+    "cache-loader": "^1.2.2",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "cssnano": "^4.1.0",
